@@ -1,3 +1,7 @@
+2013-06-17  Cedric Bail
+
+	* Edje: Use Eo array of callbacks to reduce edje memory foot print.
+
 2013-06-13  Jiyou Park
 
         * Evas: Fix crash if app call image object update add after calling api like fileset.
